Layout basico Candidatos

--- a/front/ui/src/app/app.component.html
+++ b/front/ui/src/app/app.component.html
@@ -22,13 +22,17 @@
       <mat-icon>dashboard</mat-icon>
       <span>Dashboard</span>
     </button>
-    <button mat-button class="menu-button" routerLink="/home">
+    <button mat-button class="menu-button" routerLink="/enquete">
       <mat-icon>contact_support</mat-icon>
       <span>Enquetes</span>
     </button>
+    <button mat-button class="menu-button" routerLink="/candidato">
+      <mat-icon>account_box</mat-icon>
+      <span>Candidatos</span>
+    </button>
     <button mat-button class="menu-button" routerLink="/home">
       <mat-icon>check_box</mat-icon>
-      <span>Votantes</span>
+      <span>Votos</span>
     </button>
     <mat-divider></mat-divider>
     <button mat-button class="menu-button" routerLink="/profile">
