--- a/front/ui/src/app/app.component.scss
+++ b/front/ui/src/app/app.component.scss
@@ -64,3 +64,13 @@ mat-divider {
   margin-bottom: 16px;
   background-color: rgba(255, 255, 255, 0.5);
 }
+
+.filter-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.filter-full-width {
+  width: 100%;
+}
