--- a/front/ui/src/styles.scss
+++ b/front/ui/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 
+
 html,
 body {
     height: 100%;
@@ -17,3 +18,6 @@ h4,
 p {
     margin: 0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
